Code cleaned FileUtils